Update author info

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,6 +1,6 @@
 text: InvenTree has had 40+ contributors since the project started in March 2017. Here are some of the currently most active devs.
 team:
-  - tag: SchrodingersGat
+  - tag: oliver
     name: Oliver
     text: Oliver is an Australian EE. He started InvenTree in 2017 and is the maintainer.
     links:
