--- a/.github/workflows/get_stats.yml
+++ b/.github/workflows/get_stats.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set selected color
         run: python .github/get_stats.py
+        env:
+          CROWDIN_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "[Bot] Updated the stats"
