--- a/.github/workflows/get_stats.yml
+++ b/.github/workflows/get_stats.yml
@@ -12,8 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set selected color
+      - name: Get Stats
         run: python .github/get_stats.py
+        env:
+          CROWDIN_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "[Bot] Updated the stats"
