--- a/_data/general/stats.yml
+++ b/_data/general/stats.yml
@@ -4,7 +4,7 @@ stats:
     icon: fa-brands fa-docker
   - name: GitHub Stars
     number: 2250
-    icon: fa-solid fa-stars
+    icon: fa-solid fa-star
   - name: Forks
     number: 351
     icon: fa-solid fa-code-branch
