update links to use umami

--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ baseurl: ""
 url: ""
 
 # Analytics
-analytics-domain: offen.inventree.org
-analytics-id: 2c8697da-bb92-441b-82ee-ece2622295b2
+analytics-domain: umami.invenhost.com/umami.js
+analytics-id: c713a5e9-25cf-4bb6-9e84-ceb041a53986
 
 # Rendering settings - do not touch
 collections:
