--- a/.github/workflows/get_stats.yml
+++ b/.github/workflows/get_stats.yml
@@ -9,7 +9,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    permissions: {}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -18,6 +18,7 @@ jobs:
         run: python .github/get_stats.py
         env:
           CROWDIN_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "[Bot] Updated the stats"
