--- a/_data/general/footer.yml
+++ b/_data/general/footer.yml
@@ -9,7 +9,7 @@
   - name: News
     internal: news.html
   - name: Plugin Repo
-    internal: repo.html
+    site: plugin-link
 
 - title: Ecosystem
   link:
