replace repository with list

--- a/_data/general/footer.yml
+++ b/_data/general/footer.yml
@@ -8,7 +8,7 @@
     site: doc-link
   - name: News
     internal: news.html
-  - name: Plugin Repo
+  - name: Plugin List
     internal: plugins.html
 
 - title: Ecosystem
