--- a/.github/workflows/collect_plugin.yml
+++ b/.github/workflows/collect_plugin.yml
@@ -9,6 +9,10 @@ on:
       author:
         description: Enter the name of the author if you know it
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   build:
 
@@ -26,6 +30,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "[REPO] Add plugin ${{ github.event.inputs.project }}"
           branch: "plugin/${{ github.event.inputs.project }}"
           title: "[REPO] Add plugin ${{ github.event.inputs.project }}"
