--- a/.github/workflows/collect_plugin.yml
+++ b/.github/workflows/collect_plugin.yml
@@ -13,11 +13,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions: {}
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
-        with:
-         token: ${{ secrets.BOT_PAT }}
       - name: Get Plugin file
         run: python .github/collect_plugin.py
         env:
@@ -26,6 +26,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "[REPO] Add plugin ${{ github.event.inputs.project }}"
           branch: "plugin/${{ github.event.inputs.project }}"
           title: "[REPO] Add plugin ${{ github.event.inputs.project }}"
