--- a/inventree/blog/authors.yml
+++ b/inventree/blog/authors.yml
@@ -2,6 +2,7 @@ oliver:
   name: Oliver Walters
   title: InvenTree Maintainer
   url: https://github.com/SchrodingersGat
+  image_url: https://avatars.githubusercontent.com/u/10080325?v=4
 
 matmair:
   name: Matthias Mair
