--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-_site/
-.parcel-cache/
-.cache/
-.jekyll-cache/
-dist/
-node_modules/
-.jekyll-metadata
+# Dependencies
+/node_modules
+
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
