--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -18,6 +18,10 @@ jobs:
           node-version: 18
           cache: yarn
 
+      - name: Update Stats
+        run: |
+          python .github/get_stats.py
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: Test build website
