--- a/.github/workflows/get_stats.yml
+++ b/.github/workflows/get_stats.yml
@@ -14,8 +14,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
          token: ${{ secrets.BOT_PAT }}
-      - name: Get Stats
-        run: python .github/get_stats.py
+      - name: Update Docs
+        run: |
+          python .github/get_stats.py
+          python .github/get_release_notes.py
         env:
           CROWDIN_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
