--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-medium-image-zoom": "^5.1.8",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
