--- a/_data/functions/extras.yml
+++ b/_data/functions/extras.yml
@@ -1,10 +1,10 @@
 functions:
   - title: Build Parts
     text: Inventree features a build management system to help you track the progress of your builds. Builds consume stock items to make new parts, you can decide to automatically or manually allocate parts from your current inventory.
-    link: https://docs.inventree.org/en/stable/part/part/
+    link: https://docs.inventree.org/en/stable/part
   - title: Report
     text: Generate a wide range of reports using custom templates.
-    link: https://docs.inventree.org/en/stable/report/report/
+    link: https://docs.inventree.org/en/stable/report
   - title: Extend and Customize
     text: InvenTree is designed to be highly extensible. If the core InvenTree functionality does not meet your particular need, InvenTree provides a RESTful API, a native Python library, and a powerful plugin system.
-    link: https://docs.inventree.org/en/stable/api/api/
+    link: https://docs.inventree.org/en/stable/api/
